# ps3838api

./: .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  README.md  dev-requirements.txt  match_leagues.py  pip-requirements.txt  playground.ipynb  prompt.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
examples/: betsapi_fixtures.xlsx  examples.ipynb  fixtures.json  get_odds.json  live_odds.json  playground.ipynb  sunday_top_leagues.xlsx
src/: bets_ps3838.py  tank.py
src/models/: event.py  odds.py
src/ps3838api/: __init__.py  api.py  logic.py  matching.py  playground.ipynb  tank.py  totals.py
src/ps3838api/api/: __init__.py  client.py  default_client.py
src/ps3838api/models/: bets.py  errors.py  event.py  fixtures.py  sports.py
src/ps3838api/utils/: match_leagues.py
