[metadata]
name = ps3838api
version = 0.1.0
author = Ilias Dzhabbarov
author_email = ilias.dzabbarov@gmail.com
description = Modern PS3838 API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.12
install_requires =
    requests

[options.packages.find]
where = src
